<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.punto4.MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/resistencia"
        android:id="@+id/imageView" />

    <RelativeLayout
        android:layout_width="23dp"
        android:layout_height="90dp"
        android:layout_marginTop="44dp"
        android:id="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/relativeLayout3"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="46dp">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="22dp"
        android:layout_height="90dp"
        android:id="@+id/relativeLayout2"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_toLeftOf="@+id/relativeLayout3"
        android:layout_toStartOf="@+id/relativeLayout3"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="22dp"
        android:layout_height="90dp"
        android:id="@+id/relativeLayout3"
        android:layout_alignTop="@+id/relativeLayout2"
        android:layout_centerHorizontal="true">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="22dp"
        android:layout_height="90dp"
        android:id="@+id/relativeLayout4"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="47dp"
        android:layout_alignTop="@+id/relativeLayout3"
        android:layout_toRightOf="@+id/relativeLayout3"
        android:layout_toEndOf="@+id/relativeLayout3">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:weightSum="1"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/primercolor"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <Spinner
                android:id="@+id/sColor1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/segundocolor"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <Spinner
                android:id="@+id/sColor2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tercercolor"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <Spinner
                android:id="@+id/sColor3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuartocolor"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <Spinner
                android:id="@+id/sColor4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/calcular"
                android:textSize="20dp"
                android:id="@+id/bCalcular"
                android:onClick="Calcular"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:id="@+id/tValor"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:id="@+id/tValorFinal"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tolerancia"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:id="@+id/tTolerancia"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:id="@+id/tToleranciaFinal"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
